# opm-eigen_testing

./: CMakeLists.txt  run_bench.sh
src/: eigen_slow_sparse.cpp  extern_func.c  test.cpp  test_basic_ops.cpp  timing_utils.hpp
